--- a/oTree1/StatePooling/templates/StatePooling/Task2_Page1.html
+++ b/oTree1/StatePooling/templates/StatePooling/Task2_Page1.html
@@ -91,10 +91,14 @@ Page attributes:
 
 
 </br>
-</br>
-</br>
-
 <div class = "grid-container2">
+	<div class = "row" style = "margin: 1px">
+		<div class = "columnSpacer" style="width: 43%"></div> <!-- teext centering for now -->
+			Pick an advisor
+		<div class = "columnSpacer" style="width: 40%"></div>
+	</div>
+	
+	
 	<div class = "row" style = "margin: 1px">
 
 	<div class = "columnSpacer"></div>
@@ -127,8 +131,10 @@ Page attributes:
 				<div class = "labelBox"><div class = "Rcircle"></div></div>
 				<div class = "textPercent">X%</div>
 				<div class = "percentBox">
-					<div class = "whiteBar" style="width: 90%"></div>
+					<div class = "whiteBar" style="width: 30%"></div>
+				
 				</div>
+				<div class = "textPercent">Y%</div>
 			
 			</div>
 			<div class="rowS"></div>
@@ -139,6 +145,7 @@ Page attributes:
 				<div class = "percentBox">
 					<div class = "whiteBar" style="width: 60%"></div>
 				</div>
+				<div class = "textPercent">Y%</div>
 			
 			</div>
 			<div class="rowS"></div>
@@ -150,6 +157,7 @@ Page attributes:
 				<div class = "percentBox">
 					<div class = "whiteBar" style="width: 30%"></div>
 				</div>
+				<div class = "textPercent">Y%</div>
 			
 			</div>
 			<div class="rowS"></div>
@@ -166,6 +174,7 @@ Page attributes:
 				<div class = "percentBox">
 					<div class = "whiteBar"></div>
 				</div>
+				<div class = "textPercent">Y%</div>
 			
 			</div>
 			<div class="rowS"></div>
@@ -176,6 +185,7 @@ Page attributes:
 				<div class = "percentBox">
 					<div class = "whiteBar"></div>
 				</div>
+				<div class = "textPercent">Y%</div>
 			
 			</div>
 			<div class="rowS"></div>
@@ -186,6 +196,7 @@ Page attributes:
 				<div class = "percentBox">
 					<div class = "whiteBar"></div>
 				</div>
+				<div class = "textPercent">Y%</div>
 			
 			</div>
 		</div>
@@ -201,7 +212,8 @@ Page attributes:
 </br>
 
 
-
+</br>
+</br>
 
 </br> <!-- add breaks to lower to button -->
 </br>
