--- a/oTree1/StatePooling/templates/StatePooling/Task2_Page2.html
+++ b/oTree1/StatePooling/templates/StatePooling/Task2_Page2.html
@@ -35,6 +35,7 @@ Page attributes:
 				NOTE!!! I don't think we have data collection on the folored pages yet
 -->
 <!-- This container is for the images -->
+
 <div class = "grid-container">
 <div class = "row"> <!-- probably a way to clean this up later -->
 
@@ -108,6 +109,7 @@ Page attributes:
 				<div class = "percentBox">
 					<div class = "whiteBar" style="width: 90%"></div>
 				</div>
+				<div class = "textPercent">Y%</div>
 			
 			</div>
 			<div class="rowS"></div>
@@ -118,6 +120,7 @@ Page attributes:
 				<div class = "percentBox">
 					<div class = "whiteBar" style="width: 60%"></div>
 				</div>
+				<div class = "textPercent">Y%</div>
 			
 			</div>
 			<div class="rowS"></div>
@@ -129,6 +132,7 @@ Page attributes:
 				<div class = "percentBox">
 					<div class = "whiteBar" style="width: 30%"></div>
 				</div>
+				<div class = "textPercent">Y%</div>
 			
 			</div>
 			<div class="rowS"></div>
@@ -151,16 +155,8 @@ Page attributes:
 
 <div class = "grid-container">
 <div class = "row"> 
-<div class="columnSpacer"></div>
-<div class="columnSpacer"></div>
-<div class="columnSpacer"></div>
-		<div class="evenColumn">
-			<div class = "textCenter">
-
-			</div>
-		</div>
-		
-		<div class="columnSpacer"></div>
+<div class="columnSpacer" style="width: 49%">What would you choose ...</div>
+		<div class="columnSpacer" style="width: 5.55%"></div>  <!--centering the color | gray -->
 		<div class = "buttonMid">
 			<div class = "textCenter">
 			Color | Gray
@@ -174,7 +170,7 @@ Page attributes:
 <div class="columnSpacer"></div>
 		<div class="evenColumn">
 			<div class = "textCenter">
-			If the advisor says "white"
+			If the Advisor says "white"
 			</div>
 		</div>
 		
@@ -196,7 +192,7 @@ Page attributes:
 <div class="columnSpacer"></div>
 		<div class="evenColumn">
 			<div class = "textCenter">
-			If the advisor says "black"
+			If the Advisor says "black"
 			</div>
 		</div>
 		
@@ -222,7 +218,7 @@ Page attributes:
 
 
 </br> <!-- add breaks to lower to button -->
-</br>
+
 {% next_button %}
 {% endblock %}
 
