--- a/oTree1/StatePooling/templates/StatePooling/Task1_PageGREEN.html
+++ b/oTree1/StatePooling/templates/StatePooling/Task1_PageGREEN.html
@@ -3,7 +3,7 @@
 
 
 {% block title %}
-	Page 4 - Green - {{player.round_number}} out of {{Constants.num_rounds}}
+	Part 1 - {{player.round_number}} out of {{Constants.num_rounds}} - Green
 {% endblock %}
 
 
@@ -92,7 +92,6 @@ Page attributes:
 
 </br>
 </br>
-
 <!-- This container is for button choices -->
 <div class = "grid-container">
 	<div class = "row" style="background-color: white; margin: 1px;">
@@ -100,7 +99,7 @@ Page attributes:
 		<div class="columnSpacer"></div>
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game with the green advisor 
+			Choice with Green Advisor
 			</div>
 		</div>
 		
@@ -120,7 +119,7 @@ Page attributes:
 		
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game without green advisor +0
+			Choice without Advisor +0 extra points
 			</div>
 		</div>
 		<div class="columnSpacer"></div>
@@ -133,7 +132,7 @@ Page attributes:
 		<div class="columnSpacer"></div>
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game with the green advisor
+			Choice with Green Advisor
 			</div>
 		</div>
 		
@@ -153,7 +152,7 @@ Page attributes:
 		
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game without green advisor +1
+			Choice without Advisor +1 extra points
 			</div>
 		</div>
 		<div class="columnSpacer"></div>
@@ -168,7 +167,7 @@ Page attributes:
 		<div class="columnSpacer"></div>
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game with the green advisor 
+			Choice with Green Advisor
 			</div>
 		</div>
 		
@@ -188,7 +187,7 @@ Page attributes:
 		
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game without green advisor +2
+			Choice without Advisor +2 extra points
 			</div>
 		</div>
 		<div class="columnSpacer"></div>
@@ -204,7 +203,7 @@ Page attributes:
 		<div class="columnSpacer"></div>
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game with the green advisor 
+			Choice with Green Advisor
 			</div>
 		</div>
 		
@@ -224,7 +223,7 @@ Page attributes:
 		
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game without green advisor +3
+			Choice without Advisor +3 extra points
 			</div>
 		</div>
 		<div class="columnSpacer"></div>
@@ -240,7 +239,7 @@ Page attributes:
 		<div class="columnSpacer"></div>
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game with the green advisor
+			Choice with Green Advisor
 			</div>
 		</div>
 		
@@ -260,7 +259,7 @@ Page attributes:
 		
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game without green advisor +4
+			Choice without Advisor +4 extra points
 			</div>
 		</div>
 		<div class="columnSpacer"></div>
@@ -275,7 +274,7 @@ Page attributes:
 		<div class="columnSpacer"></div>
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game with the green advisor 
+			Choice with Green Advisor
 			</div>
 		</div>
 		
@@ -295,7 +294,7 @@ Page attributes:
 		
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game without green advisor +5
+			Choice without Advisor +5 extra points
 			</div>
 		</div>
 		<div class="columnSpacer"></div>
@@ -307,7 +306,7 @@ Page attributes:
 		<div class="columnSpacer"></div>
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game with the green advisor
+			Choice with Green Advisor
 			</div>
 		</div>
 		
@@ -327,7 +326,7 @@ Page attributes:
 		
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game without green advisor +6
+			Choice without Advisor +6 extra points
 			</div>
 		</div>
 		<div class="columnSpacer"></div>
@@ -342,7 +341,7 @@ Page attributes:
 		<div class="columnSpacer"></div>
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game with the green advisor 
+			Choice with Green Advisor
 			</div>
 		</div>
 		
@@ -362,7 +361,7 @@ Page attributes:
 		
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game without green advisor +7
+			Choice without Advisor +7 extra points
 			</div>
 		</div>
 		<div class="columnSpacer"></div>
@@ -375,7 +374,7 @@ Page attributes:
 		<div class="columnSpacer"></div>
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game with the green advisor
+			Choice with Green Advisor
 			</div>
 		</div>
 		
@@ -395,7 +394,7 @@ Page attributes:
 		
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game without green advisor +8
+			Choice without Advisor +8 extra points
 			</div>
 		</div>
 		<div class="columnSpacer"></div>
@@ -410,7 +409,7 @@ Page attributes:
 		<div class="columnSpacer"></div>
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game with the green advisor 
+			Choice with Green Advisor
 			</div>
 		</div>
 		
@@ -430,7 +429,7 @@ Page attributes:
 		
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game without green advisor +9
+			Choice without Advisor +9 extra points
 			</div>
 		</div>
 		<div class="columnSpacer"></div>
@@ -443,7 +442,7 @@ Page attributes:
 		<div class="columnSpacer"></div>
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game with the green advisor
+			Choice with Green Advisor
 			</div>
 		</div>
 		
@@ -463,7 +462,7 @@ Page attributes:
 		
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game without green advisor +10
+			Choice without Advisor +10 extra points
 			</div>
 		</div>
 		<div class="columnSpacer"></div>
