--- a/oTree1/StatePooling/templates/StatePooling/Task1_PageRED.html
+++ b/oTree1/StatePooling/templates/StatePooling/Task1_PageRED.html
@@ -3,7 +3,7 @@
 
 
 {% block title %}
-	Page 2 - Red - {{player.round_number}} out of {{Constants.num_rounds}}
+	Part 1 - {{player.round_number}} out of {{Constants.num_rounds}} - Red
 {% endblock %}
 
 
@@ -99,7 +99,7 @@ Page attributes:
 		<div class="columnSpacer"></div>
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game with the red advisor 
+			Choice with Red Advisor
 			</div>
 		</div>
 		
@@ -119,7 +119,7 @@ Page attributes:
 		
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game without red advisor +0
+			Choice without Advisor +0 extra points
 			</div>
 		</div>
 		<div class="columnSpacer"></div>
@@ -132,7 +132,7 @@ Page attributes:
 		<div class="columnSpacer"></div>
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game with the red advisor
+			Choice with Red Advisor
 			</div>
 		</div>
 		
@@ -152,7 +152,7 @@ Page attributes:
 		
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game without red advisor +1
+			Choice without Advisor +1 extra points
 			</div>
 		</div>
 		<div class="columnSpacer"></div>
@@ -167,7 +167,7 @@ Page attributes:
 		<div class="columnSpacer"></div>
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game with the red advisor 
+			Choice with Red Advisor
 			</div>
 		</div>
 		
@@ -187,7 +187,7 @@ Page attributes:
 		
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game without red advisor +2
+			Choice without Advisor +2 extra points
 			</div>
 		</div>
 		<div class="columnSpacer"></div>
@@ -203,7 +203,7 @@ Page attributes:
 		<div class="columnSpacer"></div>
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game with the red advisor 
+			Choice with Red Advisor
 			</div>
 		</div>
 		
@@ -223,7 +223,7 @@ Page attributes:
 		
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game without red advisor +3
+			Choice without Advisor +3 extra points
 			</div>
 		</div>
 		<div class="columnSpacer"></div>
@@ -239,7 +239,7 @@ Page attributes:
 		<div class="columnSpacer"></div>
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game with the red advisor
+			Choice with Red Advisor
 			</div>
 		</div>
 		
@@ -259,7 +259,7 @@ Page attributes:
 		
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game without red advisor +4
+			Choice without Advisor +4 extra points
 			</div>
 		</div>
 		<div class="columnSpacer"></div>
@@ -274,7 +274,7 @@ Page attributes:
 		<div class="columnSpacer"></div>
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game with the red advisor 
+			Choice with Red Advisor
 			</div>
 		</div>
 		
@@ -294,7 +294,7 @@ Page attributes:
 		
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game without red advisor +5
+			Choice without Advisor +5 extra points
 			</div>
 		</div>
 		<div class="columnSpacer"></div>
@@ -306,7 +306,7 @@ Page attributes:
 		<div class="columnSpacer"></div>
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game with the red advisor
+			Choice with Red Advisor
 			</div>
 		</div>
 		
@@ -326,7 +326,7 @@ Page attributes:
 		
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game without red advisor +6
+			Choice without Advisor +6 extra points
 			</div>
 		</div>
 		<div class="columnSpacer"></div>
@@ -341,7 +341,7 @@ Page attributes:
 		<div class="columnSpacer"></div>
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game with the red advisor 
+			Choice with Red Advisor
 			</div>
 		</div>
 		
@@ -361,7 +361,7 @@ Page attributes:
 		
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game without red advisor +7
+			Choice without Advisor +7 extra points
 			</div>
 		</div>
 		<div class="columnSpacer"></div>
@@ -374,7 +374,7 @@ Page attributes:
 		<div class="columnSpacer"></div>
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game with the red advisor
+			Choice with Red Advisor
 			</div>
 		</div>
 		
@@ -394,7 +394,7 @@ Page attributes:
 		
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game without red advisor +8
+			Choice without Advisor +8 extra points
 			</div>
 		</div>
 		<div class="columnSpacer"></div>
@@ -409,7 +409,7 @@ Page attributes:
 		<div class="columnSpacer"></div>
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game with the red advisor 
+			Choice with Red Advisor
 			</div>
 		</div>
 		
@@ -429,7 +429,7 @@ Page attributes:
 		
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game without red advisor +9
+			Choice without Advisor +9 extra points
 			</div>
 		</div>
 		<div class="columnSpacer"></div>
@@ -442,7 +442,7 @@ Page attributes:
 		<div class="columnSpacer"></div>
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game with the red advisor
+			Choice with Red Advisor
 			</div>
 		</div>
 		
@@ -462,7 +462,7 @@ Page attributes:
 		
 		<div class="evenColumn">
 			<div class = "textCenter">
-			Choice of game without red advisor +10
+			Choice without Advisor +10 extra points
 			</div>
 		</div>
 		<div class="columnSpacer"></div>
