--- a/oTree1/_static/global/StatePooling.css
+++ b/oTree1/_static/global/StatePooling.css
@@ -66,7 +66,7 @@ Let us, for now, make full row height 100px, width 75% of the page
     
     .percentBox{
     	outline:  3px solid darkgray;
-    	width: 65%;
+    	width: 55%;
     	background: black;
     }
     
@@ -378,7 +378,7 @@ Let us, for now, make full row height 100px, width 75% of the page
 	
     .Gcircle {
  	 display: block;
- 	 background: chartreuse;
+ 	 background: rgb(0,230,0);
  	 border-radius: 50%;
  	 height: 40px;
  	 width: 40px;
@@ -389,7 +389,7 @@ Let us, for now, make full row height 100px, width 75% of the page
 	
     .Greycircle {
  	 display: block;
- 	 background: gray;
+ 	 background: lightgray;
  	 border-radius: 50%;
  	 height: 40px;
  	 width: 40px;
