--- a/oTree1/StatePooling/templates/StatePooling/Task1_Page1.html
+++ b/oTree1/StatePooling/templates/StatePooling/Task1_Page1.html
@@ -231,7 +231,55 @@ Page attributes:
 			</div>	
 		</div> <!-- closes row-->
 
+<!-- ############## RAINBOW ###########-->	
+	<div class = "border-line"></div>
+	<div class = "row" style="margin: 1px;">
+		<div class = "TextColumn">
+			Rainbow Advisor
+		</div>
+		<div class ="ButtonColumn">
+		</div>
+	</div> <!-- closes row-->
+	<div class = "border-line"></div>
 
+		<div class = "row" style="margin: 1px;">
+			<div class = "TextColumn">
+				<div class = "textR"> Red </div>
+			</div>
+			<div class ="ButtonColumn">
+				<form>
+ 					 <input type="radio" id = "RainR_0" name="RainRed_no" value="0" > 
+ 					 |
+ 					 <input type="radio" id = "RainR_1" name="RainRed_yes" value="1"> 
+				</form>
+			</div>	
+		</div> <!-- closes row-->
+		
+		<div class = "row" style="margin: 1px;">
+			<div class = "TextColumn">
+				<div class = "textR"> Yellow </div>
+			</div>
+			<div class ="ButtonColumn">
+				<form>
+  					<input type="radio" id = "RainY_0" name="RainYellow_no" value="0" > 
+  					|
+  					<input type="radio" id = "RainY_1" name="RainYellow_yes" value="1"> 
+				</form>
+			</div>	
+		</div> <!-- closes row-->
+
+		<div class = "row" style="margin: 1px;">
+			<div class = "TextColumn">
+				<div class = "textR"> Green </div>
+			</div>
+			<div class ="ButtonColumn">
+				<form>
+  					<input type="radio" id = "RainG_0" name="RainGreen_no" value="0" > 
+  					|
+  					<input type="radio" id = "RainG_1" name="RainGreen_yes" value="1"> 
+				</form>
+			</div>	
+		</div> <!-- closes row--><!-- need to do variabls for ths-->
 
 </div> <!-- closes container -->
 
