--- a/oTree1/StatePooling/templates/StatePooling/Task2_PageLHS.html
+++ b/oTree1/StatePooling/templates/StatePooling/Task2_PageLHS.html
@@ -3,7 +3,7 @@
 
 
 {% block title %}
-	Task #2 - 1 out of 1
+	TASK 2 page 2 LHS chosen
 {% endblock %}
 
 
@@ -11,6 +11,7 @@
 
 
 {% block content %}
+
 <!--
 Page attributes:
 - One container with the follow:
@@ -35,6 +36,7 @@ Page attributes:
 				NOTE!!! I don't think we have data collection on the folored pages yet
 -->
 <!-- This container is for the images -->
+
 <div class = "grid-container">
 <div class = "row"> <!-- probably a way to clean this up later -->
 
@@ -91,36 +93,11 @@ Page attributes:
 
 
 </br>
+</br>
+</br>
+
 <div class = "grid-container2">
-	<div class = "row" style = "margin: 1px">
-		<div class = "columnSpacer" style="width: 43%"></div> <!-- teext centering for now -->
-			Pick an advisor
-		<div class = "columnSpacer" style="width: 40%"></div>
-	</div>
 	
-	
-	<div class = "row" style = "margin: 1px">
-
-	<div class = "columnSpacer"></div>
-	<div class = "columnSpacer"></div>
-			<div class ="ButtonColumn">
-				<form>
-  					<input type="radio" id = "LHS_check" name="Advisor" value="0" > 
-  				
-  			</div>
-	<div class = "columnSpacer"></div>
-	<div class = "columnSpacer"></div>
-	<div class = "columnSpacer"></div>
-	<div class = "columnSpacer"></div>
-  			<div class ="ButtonColumn">
-  				
-  					<input type="radio" id = "RHS_check" name="Advisor" value="1"> 
-				</form>
-			</div>	
-	
-	</div> <!-- closes row-->
-
-
 	<div class = "row">
 	
 		<div class = "columnSpacer"></div>
@@ -129,12 +106,11 @@ Page attributes:
 		
 			<div class ="row">
 				<div class = "labelBox"><div class = "Rcircle"></div></div>
-				<div class = "textPercent">20%</div>
+				<div class = "textPercent">90%</div>
 				<div class = "percentBox">
-					<div class = "whiteBar" style="width: 30%"></div>
-				
+					<div class = "whiteBar" style="width: 90%"></div>
 				</div>
-				<div class = "textPercent">80%</div>
+				<div class = "textPercent">10%</div>
 			
 			</div>
 			<div class="rowS"></div>
@@ -166,39 +142,7 @@ Page attributes:
 		<div class = "columnSpacer"></div>
 	
 		<div class = "partialBox">
-		<div class="rowS"></div>
 		
-			<div class ="row">
-				<div class = "labelBox"><div class = "Rcircle"></div></div>
-				<div class = "textPercent">40%</div>
-				<div class = "percentBox">
-					<div class = "whiteBar"></div>
-				</div>
-				<div class = "textPercent">60%</div>
-			
-			</div>
-			<div class="rowS"></div>
-			
-			<div class ="row">
-				<div class = "labelBox"><div class = "Ycircle"></div></div>
-				<div class = "textPercent">40%</div>
-				<div class = "percentBox">
-					<div class = "whiteBar"></div>
-				</div>
-				<div class = "textPercent">60%</div>
-			
-			</div>
-			<div class="rowS"></div>
-			
-			<div class ="row">
-				<div class = "labelBox"><div class = "Gcircle"></div></div>
-				<div class = "textPercent">40%</div>
-				<div class = "percentBox">
-					<div class = "whiteBar"></div>
-				</div>
-				<div class = "textPercent">60%</div>
-			
-			</div>
 		</div>
 		<div class="rowS"></div>
 		<div class = "columnSpacer"></div>
@@ -207,17 +151,75 @@ Page attributes:
 	</div>
 </div>
 
+</br>
+</br>
 
+<div class = "grid-container">
+<div class = "row"> 
+<div class="columnSpacer" style="width: 49%">What would you choose ...</div>
+		<div class="columnSpacer" style="width: 5.55%"></div>  <!--centering the color | gray -->
+		<div class = "buttonMid">
+			<div class = "textCenter">
+			Color | Gray
+			</div>
+		</div>
+</div>		
+
+<div class = "row"> <!-- probably a way to clean this up later -->
+<div class="columnSpacer"></div>
+<div class="columnSpacer"></div>
+<div class="columnSpacer"></div>
+		<div class="evenColumn">
+			<div class = "textCenter">
+			If the Advisor says "white"
+			</div>
+		</div>
+		
+		<div class="columnSpacer"></div>
+		
+		<div class = "buttonMid">
+			<div class = "textCenter">
+			<form>
+				<input type="radio" id = "Q1_0" name="q1" value="0" > 
+				|
+ 				<input type="radio" id = "Q1_1" name="q1" value="1"> 
+			</form>
+			</div>
+		</div>
+</div> <!--closes row-->
+<div class = "row"> <!-- probably a way to clean this up later -->
+<div class="columnSpacer"></div>
+<div class="columnSpacer"></div>
+<div class="columnSpacer"></div>
+		<div class="evenColumn">
+			<div class = "textCenter">
+			If the Advisor says "black"
+			</div>
+		</div>
+		
+		<div class="columnSpacer"></div>
+		
+		<div class = "buttonMid">
+			<div class = "textCenter">
+			<form>
+				<input type="radio" id = "Q1_0" name="q1" value="0" > 
+				|
+ 				<input type="radio" id = "Q1_1" name="q1" value="1"> 
+			</form>
+			</div>
+		</div>
+</div> <!--closes row-->
+
+
+</div>
 
 </br>
 
 
-</br>
-</br>
+
 
 </br> <!-- add breaks to lower to button -->
-</br>
-<input type="hidden" name="Advisor_VAR" id="Advisor_Val"/>
+
 {% next_button %}
 {% endblock %}
 
@@ -259,27 +261,6 @@ Page attributes:
 	var GrayText = document.createTextNode({{player.GrayPoints}} + ' points'); //this puts the value of the element in
 	GrayNode.appendChild(GrayText);
 	GrayDiv.appendChild(GrayNode);
-	
-	var Advisor = document.getElementById("Advisor_Val");	
-	
-	$('input[name="Advisor"]').on("click", function(e) {
-		console.log("Choosing an advisor");
-		if (document.getElementById("LHS_check").checked){
-			console.log("	LHS! Take the 0 value");
-			Advisor.value = 0;
-			localStorage.setItem("StoredValAdvisor", Advisor.value );
-			console.log("VALUE IS: " + localStorage.getItem("StoredValAdvisor"));
-		}
-		if (document.getElementById("RHS_check").checked){
-			console.log("	RHS! Take the 1 value");
-			Advisor.value = 1;
-			localStorage.setItem("StoredValAdvisor", Advisor.value );
-			console.log("VALUE IS: " + localStorage.getItem("StoredValAdvisor"));
-		}
-    
-	});
-
-
 	
 	</script>
 {% endblock %}
