changes to selected page

--- a/oTree1/StatePooling/templates/StatePooling/Task2_PageSELECTED.html
+++ b/oTree1/StatePooling/templates/StatePooling/Task2_PageSELECTED.html
@@ -180,8 +180,66 @@ Page attributes:
 	</div>
 </div>
 
+</br>
 
 
+<div class = "grid-container">
+<div class = "row"> 
+<div class="columnSpacer" style="width: 49%">What would you choose ...</div>
+		<div class="columnSpacer" style="width: 5.55%"></div>  <!--centering the color | gray -->
+		<div class = "buttonMid">
+			<div class = "textCenter">
+			Color | Gray
+			</div>
+		</div>
+</div>		
+
+<div class = "row"> <!-- probably a way to clean this up later -->
+<div class="columnSpacer"></div>
+<div class="columnSpacer"></div>
+<div class="columnSpacer"></div>
+		<div class="evenColumn">
+			<div class = "textCenter">
+			If the Advisor says "white"
+			</div>
+		</div>
+		
+		<div class="columnSpacer"></div>
+		
+		<div class = "buttonMid">
+			<div class = "textCenter">
+			<form>
+				<input type="radio" id = "Q1_0" name="q1" value="0" > 
+				|
+ 				<input type="radio" id = "Q1_1" name="q1" value="1"> 
+			</form>
+			</div>
+		</div>
+</div> <!--closes row-->
+<div class = "row"> <!-- probably a way to clean this up later -->
+<div class="columnSpacer"></div>
+<div class="columnSpacer"></div>
+<div class="columnSpacer"></div>
+		<div class="evenColumn">
+			<div class = "textCenter">
+			If the Advisor says "black"
+			</div>
+		</div>
+		
+		<div class="columnSpacer"></div>
+		
+		<div class = "buttonMid">
+			<div class = "textCenter">
+			<form>
+				<input type="radio" id = "Q1_0" name="q1" value="0" > 
+				|
+ 				<input type="radio" id = "Q1_1" name="q1" value="1"> 
+			</form>
+			</div>
+		</div>
+</div> <!--closes row-->
+
+</div>
 </br>
 
 
