--- a/otree SILVIO FINAL/StatePooling/templates/StatePooling/Task2_Page1.html
+++ b/otree SILVIO FINAL/StatePooling/templates/StatePooling/Task2_Page1.html
@@ -1,13 +1,9 @@
 {% extends "global/Page.html" %}
 {% load static otree %}
 
-
 {% block title %}
-	TASK 2 TEST
+	Task #2 - 1 out of 1
 {% endblock %}
-
-
-
 
 
 {% block content %}
@@ -17,23 +13,16 @@ Page attributes:
 	3 colored balls and point values
 	gray urn point value
 	
-- radio buttons
-	Choice without extra questions
-	
-	Is it red
-		yes
-		no
-	
-	yellow
-		yes
-		no
-	
-	green
-		yes
-		no
-		
+- Two blocks for pick an advisor
+	A LHS and RHS box with bars that show their results per color	
+
 				NOTE!!! I don't think we have data collection on the folored pages yet
 -->
+
+
+
+
+<!-- ############################################################ -->
 <!-- This container is for the images -->
 <div class = "grid-container">
 <div class = "row"> <!-- probably a way to clean this up later -->
@@ -86,18 +75,49 @@ Page attributes:
 	</div>
 </div> <!-- closes row -->
 </div> <!--closes container -->
-
+<!-- ############################################################ -->
 
 
 
 </br>
+
+
+<!-- ############################################################ -->
+<!-- two boxes that show the two advisors, including also the "Pick an advisor" line-->
 <div class = "grid-container2">
+	<div class = "row" style = "margin: 1px">
+		<div class = "columnSpacer" style="width: 43%"></div> <!-- teext centering for now -->
+			Pick an advisor
+		<div class = "columnSpacer" style="width: 40%"></div>
+	</div>
+	
+	
+	<div class = "row" style = "margin: 1px">
+
+	<div class = "columnSpacer"></div>
+	<div class = "columnSpacer"></div>
+			<div class ="ButtonColumn">
+				<form>
+  					<input type="radio" id = "LHS_check" name="Advisor" value="0" > 
+  				
+  			</div>
+	<div class = "columnSpacer"></div>
+	<div class = "columnSpacer"></div>
+	<div class = "columnSpacer"></div>
+	<div class = "columnSpacer"></div>
+  			<div class ="ButtonColumn">
+  				
+  					<input type="radio" id = "RHS_check" name="Advisor" value="1"> 
+				</form>
+			</div>	
+	
+	</div> <!-- closes row-->
 
 
 	<div class = "row">
 	
 		<div class = "columnSpacer"></div>
-		<div class = "partialBox" id = "LHS_BOX">
+		<div class = "partialBox">
 		<div class="rowS"></div>
 		
 			<div class ="row">
@@ -138,7 +158,7 @@ Page attributes:
 	
 		<div class = "columnSpacer"></div>
 	
-		<div class = "partialBox" id = "RHS_BOX">
+		<div class = "partialBox">
 		<div class="rowS"></div>
 		
 			<div class ="row">
@@ -178,78 +198,26 @@ Page attributes:
 
 	
 	</div>
-
 </div>
-
-</br>
-
-
-<div class = "grid-container">
-<div class = "row"> 
-<div class="columnSpacer" style="width: 49%">What would you choose ...</div>
-		<div class="columnSpacer" style="width: 5.55%"></div>  <!--centering the color | gray -->
-		<div class = "buttonMid">
-			<div class = "textCenter">
-			Color | Gray
-			</div>
-		</div>
-</div>		
-
-<div class = "row"> <!-- probably a way to clean this up later -->
-<div class="columnSpacer"></div>
-<div class="columnSpacer"></div>
-<div class="columnSpacer"></div>
-		<div class="evenColumn">
-			<div class = "textCenter">
-			If the Advisor says "white"
-			</div>
-		</div>
-		
-		<div class="columnSpacer"></div>
-		
-		<div class = "buttonMid">
-			<div class = "textCenter">
-			<form>
-				<input type="radio" id = "Q1_0" name="q1" value="0" > 
-				|
- 				<input type="radio" id = "Q1_1" name="q1" value="1"> 
-			</form>
-			</div>
-		</div>
-</div> <!--closes row-->
-<div class = "row"> <!-- probably a way to clean this up later -->
-<div class="columnSpacer"></div>
-<div class="columnSpacer"></div>
-<div class="columnSpacer"></div>
-		<div class="evenColumn">
-			<div class = "textCenter">
-			If the Advisor says "black"
-			</div>
-		</div>
-		
-		<div class="columnSpacer"></div>
-		
-		<div class = "buttonMid">
-			<div class = "textCenter">
-			<form>
-				<input type="radio" id = "Q1_0" name="q1" value="0" > 
-				|
- 				<input type="radio" id = "Q1_1" name="q1" value="1"> 
-			</form>
-			</div>
-		</div>
-</div> <!--closes row-->
-
-</div>
-</br>
+<!-- ############################################################ -->
 
 
+
+
+
+
+
+
+<!-- add breaks to lower to button -->
 </br>
 </br>
-
-</br> <!-- add breaks to lower to button -->
+</br>
+</br> 
 </br>
 
+<!-- Hidden variable storage -->
+<!-- Note: name= is the python name, id is the html name-->
+<input type="hidden" name="Advisor_VAR" id="Advisor_Val"/>
 {% next_button %}
 {% endblock %}
 
@@ -265,20 +233,6 @@ Page attributes:
 
 {% block scripts %}
 	<script>
-
-	var result = localStorage.getItem("StoredValAdvisor")
-	if (result == 0){
-		console.log('LHS was Chosen')
-		document.getElementById("RHS_BOX").innerHTML = "";
-	}
-
-	if (result == 1){
-		console.log('RHS was Chosen')
-		document.getElementById("LHS_BOX").innerHTML = "";
-	}
-	
-	
-		
 	/* FOR UPDATING THE INFO IN THE POINTS BOX */
 	var RedDiv = document.getElementById("RedBallInfo");
 	var RedNode = document.createElement("p");
@@ -303,10 +257,29 @@ Page attributes:
 	var GrayText = document.createTextNode({{player.GrayPoints}} + ' points'); //this puts the value of the element in
 	GrayNode.appendChild(GrayText);
 	GrayDiv.appendChild(GrayNode);
+	/* ========================= */
 	
-
 	
-
-	
+	/* =========Advisor variable storage ====== */
+	var Advisor = document.getElementById("Advisor_Val");	
+	/* StoredValAdvisor is the javascript variable that is locally stored */
+	/* Dynamically updating the StoredValAdvisor variable. */
+	$('input[name="Advisor"]').on("click", function(e) {
+		console.log("Choosing an advisor");
+		if (document.getElementById("LHS_check").checked){
+			console.log("	LHS! Take the 0 value");
+			Advisor.value = 0;
+			localStorage.setItem("StoredValAdvisor", Advisor.value );
+			console.log("VALUE IS: " + localStorage.getItem("StoredValAdvisor"));
+		}
+		if (document.getElementById("RHS_check").checked){
+			console.log("	RHS! Take the 1 value");
+			Advisor.value = 1;
+			localStorage.setItem("StoredValAdvisor", Advisor.value );
+			console.log("VALUE IS: " + localStorage.getItem("StoredValAdvisor"));
+		}
+    
+	});
+	/* =========================== */
 	</script>
 {% endblock %}
