Editted data requirements

--- a/otree SILVIO FINAL/StatePooling/templates/StatePooling/Task2_PageSELECTED.html
+++ b/otree SILVIO FINAL/StatePooling/templates/StatePooling/Task2_PageSELECTED.html
@@ -5,7 +5,7 @@
 
 
 {% block title %}
-	Task 2 - Advisor Picked
+	Part 2 - Round {{player.round_number}} out of {{Constants.num_rounds}} - Advisor Picked
 {% endblock %}
 
 
