Changes task 2 to be more independent

--- a/otree SILVIO FINAL/StatePooling_TASK2/templates/StatePooling_TASK2/Task2_PageSELECTED.html
+++ b/otree SILVIO FINAL/StatePooling_TASK2/templates/StatePooling_TASK2/Task2_PageSELECTED.html
@@ -364,6 +364,7 @@ Page attributes:
 	
 	/* Dynamically retrieving the StoredValAdvisor */
 	/* StoredValAdvisor is the javascript variable that is locally stored on the previous page. */
+	/* This block wipes the LHS or RHS bo depending on the previous pages' result */
 	var result = localStorage.getItem("StoredValAdvisor")
 	if (result == 0){
 		console.log('LHS was Chosen')
